--- a/css/sass/forms/salesforce-signup.scss
+++ b/css/sass/forms/salesforce-signup.scss
@@ -194,12 +194,12 @@ body.form-wrapper {
     }
 
     textarea {
-      background: #041C33 !important;
-      color: #fff !important;
+      //background: #041C33 !important;
+      //color: #fff !important;
     }
 
     input {
-      color: #ddd !important;
+      //color: #ddd !important;
 
     }
 
@@ -210,7 +210,7 @@ body.form-wrapper {
     select {
       padding: 8px;
       font-size: 16px;
-      background: #041C33 !important;
+      //background: #041C33 !important;
       width: 100%;
     }
 
@@ -227,14 +227,14 @@ body.form-wrapper {
 
     select {
       min-width: 95.5% !important;
-      color: #ddd;
+      //color: #ddd;
       -webkit-appearance: none;
     }
 
     input,
     textarea {
       min-width: 95.5% !important;
-      background: #041C33 !important;
+      //background: #041C33 !important;
     }
 
     option {
