adds dashboard box; h5 styling on we-are

--- a/css/sass/home/sections.scss
+++ b/css/sass/home/sections.scss
@@ -170,6 +170,11 @@
         //font-size: 1.5em;
       }
     }
+
+    h5 {
+      margin-top: 0;
+    }
+
     .weave-button {
       display: flex;
       align-items: center;
