--- a/css/sass/core/elements.scss
+++ b/css/sass/core/elements.scss
@@ -103,3 +103,8 @@ input[type="submit"],
 .trx_addons_scroll_to_top {
   display: none !important;
 }
+
+.weave-btn-wrap {
+  margin: 2em 0 3em;
+  text-align: center;
+}
