--- a/css/sass/home/content.scss
+++ b/css/sass/home/content.scss
@@ -170,7 +170,7 @@
   width: 100%;
   max-width: 1024px;
   margin: 0 auto;
-  padding-bottom: 3em;
+  //padding-bottom: 3em;
   background: #fff;
   transition: all 250ms;
 
