--- a/css/sass/home/content.scss
+++ b/css/sass/home/content.scss
@@ -215,6 +215,7 @@
     overflow: hidden;
     opacity: 1;
     transition: opacity 500ms;
+    text-align: center;
 
     &.incoming {
       opacity: 0;
