--- a/css/sass/core/elements.scss
+++ b/css/sass/core/elements.scss
@@ -108,3 +108,8 @@ input[type="submit"],
   margin: 2em 0 3em;
   text-align: center;
 }
+
+.has-2-columns {
+  align-items: center;
+  justify-content: center;
+}
